--- a/less/main.css
+++ b/less/main.css
@@ -2,7 +2,7 @@ body {
 	margin:0px;  
 	height: auto;
     min-height: 100%;
-    min-width: 1020px;
+    min-width: 1200px;
 }
 
 @font-face { 
